--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.10",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-interactions": "^0.0.8"
+    "react-interactions": "^0.0.8",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animatecss": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
