--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "next": "13.5.4",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-interactions": "^0.0.8",
@@ -29,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
+    "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
